password updated on database.js
deleted < > symbols on password at database.js and received  console log but there is still an error

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 GOOGLE_ID=27390103275-9pe5525g630ejjen0niv3voh7lepb35g.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-MONGODB_URI=mongodb+srv://keremar0000:<kerem585>@cluster0.fag4r4s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-NEXTAUTH_URL=https://example.com
+MONGODB_URI=mongodb+srv://keremar0000:kerem585@cluster0.fag4r4s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 NEXTAUTH_URL= http://localhost:3000
 NEXTAUTH_URL_INTERNAL= http://localhost:3000
 NEXTAUTH_SECRET = sGMxx3AyY2fkw2p9Wb1MtrzbmdV6XE1M60K/Y/pV+RI=
